[tool.poetry]
name = "19-1-lessson-homework"
version = "0.1.0"
description = ""
authors = ["Luka Shermadini <Shermadinil.luka@gmail.com>"]
readme = "README.md"
packages = [{include = "19"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
